--- a/Week2PersonalAssignment/package.json
+++ b/Week2PersonalAssignment/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.10.0",
+    "nodemon": "^2.0.20"
   }
 }
